доделал карту и инфраструктурные особенности района под картой

--- a/src/html/landing.html
+++ b/src/html/landing.html
@@ -188,7 +188,7 @@
         <h2 class="visually-hidden">Информация об инфраструктуре района</h2><span class="title">Развитая инфраструктура
           от школы до больницы в шаговой доступности</span>
       </div>
-      <div id="map" class="map">
+      <div id="map" class="infrastructure__map">
 
         <div class="infrastructure__wrap">
           <ul class="infrastructure__list">
@@ -290,7 +290,7 @@
       </div>
       <div class="wrapper">
         <div class="infrastructure-benefits">
-          <ul class="infrastructure-benefits__list list">
+          <ul class="infrastructure-benefits__list">
             <li class="infrastructure-benefits__item">
               <img class="infrastructure-benefits__icon" src="img/icons/infrastructure-1.svg" alt="Иконка" width="36"
                 height="36">
