Закончил блок со способами оплаты при покупке квартир

--- a/src/html/landing.html
+++ b/src/html/landing.html
@@ -354,6 +354,46 @@
       </div>
     </section>
 
+    <section class="payment">
+      <div class="wrapper">
+        <div class="payment__wrapper">
+          <h2 class="visually-hidden">Возможные способы оплаты при покупке квартир</h2><span
+            class="payment__title title">Какой способ оплаты предпочитаете?</span>
+          <p class="payment__text">Мы гибко подстраиваемся под любые ситуации и предлагаем вам выбрать наиболее удобный
+            способ оплаты.</p>
+          <ul class="payment__list">
+            <li class="payment__list-item"><img src="img/icons/payment-1.svg" alt="Иконка" class="payment__icon"> <span class="payment__name">Полный расчет при покупке</span>
+              <p class="payment__description">Наиболее выгодный вариант оплаты. Возможны скидки при единовременном
+                погашении всей стоимости квартиры.</p>
+            </li>
+            <li class="payment__list-item"><img src="img/icons/payment-2.svg" alt="Иконка" class="payment__icon"> <span class="payment__name">Ипотека</span>
+              <ul class="payment__description">
+                <li>Материнский капитал</li>
+                <li>Военная ипотека</li>
+                <li>Без первоначального взноса</li>
+                <li>Юридическое сопровождение сделки</li>
+              </ul>
+            </li>
+            <li class="payment__list-item"><img src="img/icons/payment-3.svg" alt="Иконка" class="payment__icon"> <span class="payment__name">Индивидуальная рассрочка от застройщика</span>
+              <div class="payment__description-wrapper">
+                <ul class="payment__description">
+                  <li><b>Срок: </b>3 месяца</li>
+                  <li><b>Первоначальный взнос: </b>60%</li>
+                  <li><b>Стоимость остатка: </b>фиксированная</li>
+                </ul>
+                <ul class="payment__description">
+                  <li><b>Срок: </b>3-6 месяцев</li>
+                  <li><b>Первоначальный взнос: </b>60%</li>
+                  <li><b>Стоимость остатка: </b>погашается в соответствии с актуальными на момент оплаты расценками за
+                    м<sup>2</sup>.</li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
 
   </main>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
